Disable turbolinks on dispatch page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   <%= csrf_meta_tags %>
   <%= yield :head %>
 </head>
-<body class="<%= bodytag_class %>">
+<body class="<%= bodytag_class %>" <%= bodytag_turbolinks %>>
 
   <div id="session-timeout-warning" style="display: none;">
     You will be logged off in <span><!-- countdown place holder
