--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,12 +4,12 @@
   <title>
     <%= content_for?(:title) ? yield(:title) : "RidePilot" %>
   </title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'application', media: 'all' %>
+  <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
   <%= yield :head %>
 </head>
-<body class="<%= bodytag_class %>" <%= bodytag_turbolinks %>>
+<body class="<%= bodytag_class %>">
 
   <div id="session-timeout-warning" style="display: none;">
     You will be logged off in <span><!-- countdown place holder
