adding fixed notice to layout stating this is a preview

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,11 @@
   <%= yield :head %>
 </head>
 <body class="<%= bodytag_class %>">
-
+  <div id="production-test-warning">
+    <div class="stripes"></div>
+    <span>This is only a <em>preview of production</em> on the new server. To view the live production data, please go to
+      <a href="http://apps.rideconnection.org/ridepilot">apps.rideconnection.org/ridepilot</a>.</span>
+  </div>
   <div id="session-timeout-warning" style="display: none;">
     You will be logged off in <span><!-- countdown place holder
     --></span>&nbsp;seconds due to inactivity.
