--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -167,6 +167,46 @@ button {width: auto; overflow: visible;}
  * Structure
  *
  */
+#production-test-warning {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 12px;
+  font-weight: bold;
+  background-color: #FFE5EA;
+  text-align: center;
+  font-size: 18px;
+  line-height: 30px;
+  z-index: 1000;
+}
+
+#production-test-warning .stripes {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-size: 30px 30px;
+  background-image: linear-gradient(
+    45deg, 
+    rgba(black, 0.1)  25%, 
+    transparent       25%, 
+    transparent       50%, 
+    rgba(black, 0.1)  50%, 
+    rgba(black, 0.1)  75%, 
+    transparent       75%, 
+    transparent
+  );  
+}
+
+#production-test-warning span {
+  position: relative;
+}
+
+body {
+  padding-top: 50px;
+}
 #header {
   padding: 10px 20px 5px;
   background: #0d4680;
@@ -333,12 +373,12 @@ body.reports #primary-nav li.vehicles-drivers-users a:hover, body.reports #prima
 
 #session-timeout-warning {
   position: fixed;
-  top: 0%;
-  left: 0%;
+  top: 0;
+  left: 0;
   width: 100%;
   padding: 1.3em 0;
   font-weight: bold;
-  background: #e5f2ff;
+  background: #E5F2FF;
   text-align: center;
   border-bottom: 1px solid #598FEF;
   z-index: 2000;
