--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -72,6 +72,9 @@
     <%= yield %>
   </div>
 
+  <%= render partial: 'layouts/footer' %>
+  <%= yield :footer%>
+
   <% if current_user %>
     <%= javascript_tag do %>
       $(document).ready(function(){
