--- a/app/views/addresses/_results.html.erb
+++ b/app/views/addresses/_results.html.erb
@@ -11,7 +11,7 @@
       <td><%= address.phone_number %></td>
       <td><%= address.in_district? ? "In District" : "Out of District" %></td>
       <% if can? :edit, Address %>
-      <td><%= link_to "Edit", edit_address_path(address), :class=>'edit edit-address' %></td>
+      <td><%= link_to translate_helper("edit"), edit_address_path(address), :class=>'edit edit-address' %></td>
       <!-- <td><%#= link_to "Delete", address, :confirm => 'Are you sure?', :method => :delete, :class=>'delete' %></td> -->
       <% end %>
     </tr>
