--- a/app/views/cab_trips/_no_cab_trips.html.erb
+++ b/app/views/cab_trips/_no_cab_trips.html.erb
@@ -1,1 +1,1 @@
-<tr><td colspan="2">No cab trips in this date range</td></tr>
+<tr><td colspan="2">translate_helper("no_cab_trips_in_date_range")</td></tr>
