--- a/app/views/customers/_customer_listing.html.erb
+++ b/app/views/customers/_customer_listing.html.erb
@@ -3,13 +3,13 @@
   <thead>
     <tr>
       <th></th>
-      <th>Name</th>
-      <th>Phone</th>
-      <th>Alternate Phone</th>
-      <th>Email</th>
-      <th>Activated Date</th>
+      <th><%=translate_helper("name")%></th>
+      <th><%=translate_helper("phone")%></th>
+      <th><%=translate_helper("alternate_phone")%></th>
+      <th><%=translate_helper("email")%></th>
+      <th><%=translate_helper("activated_date")%></th>
       <% if show_inactivated_date %>
-      <th>Inactivated Date</th>
+        <th><%=translate_helper("inactivated_date")%></th>
       <% end %>
       <th></th>
       <th></th>
@@ -29,9 +29,9 @@
       <% if show_inactivated_date %>
       <td><%= customer.inactivated_date %></td>
       <% end %>
-      <td><%= link_to 'New Trip', new_trip_path(:customer_id=>customer.id), :class=>'new-trip' %></td>
-      <td><%= link_to 'Edit', edit_customer_path(customer), :class=>'edit' %></td>
-      <td><% if can_delete? customer %><%= link_to 'Delete', customer, :confirm => 'Are you sure?', :method => :delete, :class=>'delete' %><% end %></td>
+      <td><%= link_to translate_helper("new_trip"), new_trip_path(:customer_id=>customer.id), :class=>'new-trip' %></td>
+      <td><%= link_to translate_helper("edit"), edit_customer_path(customer), :class=>'edit' %></td>
+      <td><% if can_delete? customer %><%= link_to translate_helper("delete"), customer, :confirm => translate_helper("confirm"), :method => :delete, :class=>'delete' %><% end %></td>
     </tr>
     <% end %>
   </tbody>
