--- a/app/views/trips/_trip_form.html.erb
+++ b/app/views/trips/_trip_form.html.erb
@@ -19,7 +19,7 @@
     <% end %>
   </td>
   <td>
-    <%= trip.trip_purpose %>
+    <%= trip.trip_purpose_name %>
   </td>
   <td>
     <%= trip_fields.check_box :round_trip %>
