--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -129,7 +129,7 @@
     <ol class="section second">
       <li class="selfclear">
         <%= f.label :trip_purpose, "Trip Purpose:" %>
-        <%= f.select :trip_purpose, @trip_purposes, :include_blank => true %>
+        <%= f.select :trip_purpose_id, @trip_purposes.map { |tp| [tp.name, tp.id] }, :include_blank => true %>
       </li>
 
       <li class="selfclear passengers group_size">
