finish customer field labels [#98320888]

--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -1,5 +1,5 @@
 <div id="page-header">
-  <h1>translate_helper("new_customer")</h1>
+  <h1><%=translate_helper("new_customer")%></h1>
 </div>
 
 <%= render 'form' %>
