--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,5 +1,5 @@
 <div id="page-header">
-  <h1>translate_helper("customer_listing")</h1>
+  <h1><%=translate_helper("customer_listing")%></h1>
 </div>
 
 <%= form_tag found_customers_path, :class=>'customer-search', :method=>:get do %> 
