refactoring trip_results by creating TripResult table; updated code to remove dependencies on TRIP_RESULT_CODES hard-coded hash; Further discussion is needed regarding specific code dependency, such as quering completed trips based on COMP result code

--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -127,7 +127,7 @@
     <% for trip in @trips %>
     <tr>
       <td><%= link_to trip.pickup_time.strftime('%m-%d-%Y %I:%M%P'), edit_trip_path(trip) %></td>
-      <td><%= TRIP_RESULT_CODES[trip.trip_result] %></td>
+      <td><%= trip.trip_result_name %></td>
     </tr>
     <% end %>
   <% else %>
