--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -208,7 +208,7 @@
     <ol class="section third">
       <li class="selfclear">
         <%= f.label :trip_result, "Result:" %>
-        <%= f.select :trip_result, @trip_results, :include_blank => true %>
+        <%= f.select :trip_result_id, @trip_results, :include_blank => true %>
       </li>
 
       <li class="selfclear donation">
