moving SERVICE_LEVELS to service_levels table

--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -94,7 +94,7 @@
     <ol class="section third">
       <li class="selfclear">
         <%= f.label :default_service_level, translate_helper("default_service_level") %>
-        <%= f.select :default_service_level, @service_levels, :include_blank => true %>
+        <%= f.select :service_level_id, @service_levels, :include_blank => true %>
       </li>
 
       <li class="selfclear">
