--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -223,7 +223,7 @@
 
       <li class="selfclear">
         <%= f.label :service_level, "Service Level:" %>
-        <%= f.select :service_level, @service_levels, :include_blank => true %>
+        <%= f.select :service_level_id, @service_levels, :include_blank => true %>
       </li>
 
       <li class="selfclear">
