--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,3 +1,3 @@
 <%- link = link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %>
 
-<%= translate_helper("reset_password_email", email: @resource.email, link: link %>
+<%= translate_helper("reset_password_email", email: @resource.email, link: link) %>
