--- a/app/views/lookup_tables/_delete_value_button.html.haml
+++ b/app/views/lookup_tables/_delete_value_button.html.haml
@@ -1,6 +1,7 @@
 = button_tag :type => 'button', id: 'deleteLookupTableValue', "data-target" => "#deleteLookupTableValueDialog", "data-toggle" => "modal", disabled: 'disabled', :class => "btn action-button" do
   = translate_helper(:delete)
 
+- confirm_delete_message = translate_helper(:confirm_delete_message)
 #deleteLookupTableValueDialog.modal.fade.col-sm-12{"aria-describedby" => translate_helper(:delete_value), :role => "dialog", "aria-hidden" => 'true', :tabindex => "-1"}
   .modal-dialog
     .modal-content
@@ -13,15 +14,17 @@
             %strong
               = translate_helper(:site_title)
         .modal-body{:style => "text-align:left;"}
-          = translate_helper(:confirm_delete_message)
+          = confirm_delete_message
 
 :javascript
   $(document).ready(function() {
+    var confirm_delete_message = "#{confirm_delete_message}";
     $('#deleteLookupTableValueDialog').on('show.bs.modal', function (e) {
       var form = $(this).find('form');
       var baseUrl = "#{destroy_value_lookup_table_path(table)}";
       var currentValue = $('#lookup_table').DataTable().row($('#lookup_table .selected')).data();
       var newUrl = baseUrl + "?value=" + currentValue;
       form.prop('action', newUrl);
+      form.find('.modal-body').html(confirm_delete_message.replace('%{value}', currentValue));
     });
   });
