--- a/app/views/drivers/new.html.erb
+++ b/app/views/drivers/new.html.erb
@@ -1,5 +1,5 @@
 <div id="page-header">
-  <h1>New Driver</h1>
+  <h1><%= translate_helper("new_driver_heading") %></h1>
 </div>
 
 <%= render :partial=>"form" %>
