--- a/app/views/funding_sources/edit.html.erb
+++ b/app/views/funding_sources/edit.html.erb
@@ -2,4 +2,4 @@
 
 <hr/>
 
-<%= link_to "Back to List of Funding Sources", funding_sources_path, :class=>'action-bttn' %>
+<%= link_to translate_helper("funding_sources_link_back"), funding_sources_path, :class=>'action-bttn' %>
